# marvin_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: arm_mounts.yaml  inertials.yaml  joint_limits.yaml  kinematics.yaml
launch/: visualize_marvin.launch.py
meshes/base/: base_link.STL
test/: test_marvin_description.py
urdf/: marvin.urdf.xacro  marvin_with_gripper.urdf.xacro  rviz2.rviz
urdf/parts/: marvin_arm.ros2_control.xacro  marvin_arm_parameters.xacro  marvin_bimanual_arm.xacro  marvin_left_arm.xacro  marvin_right_arm.xacro  marvin_stand.xacro
